--- a/index.html
+++ b/index.html
@@ -209,6 +209,6 @@
                 <a href="">DOWNLOAD</a>
          </div>
 
-    <script src="./bundle.js"></script>
+    <script src="dist/type.min.js"></script>
 </body>
 </html>
