--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
            </h1>
 
            <div class="download-secion">
-                <a href="">DOWNLOAD</a>
+                <a href="https://github.com/shantoislam6/Type-v2/archive/master.zip">DOWNLOAD</a>
          </div>
 
     <script src="dist/type.min.js"></script>
